fixed centering on mobile

--- a/Website/resources/css/styles.css
+++ b/Website/resources/css/styles.css
@@ -142,6 +142,10 @@ a:hover {
 	color: #ffffff;
 	}
 
+.intxt {
+	margin: 1%;
+	}
+
 .hdimg {
 	width: 25% !important;
 	margin: 0% 5% 0% 0%;
@@ -155,11 +159,15 @@ a:hover {
 	border-color: #ffffff;
 	}
 
+.infop {
+	margin: 1%;
+	}
+
 .intxt2 {
 	border: 1px solid;
 	border-radius: 10px;
 	padding: 10px;
-	margin: 3% 0% 1% 1%;
+	margin: 3% 1% 1% 1%;
 	width: max-content;
 	font-weight: 600;
 	transition: 0.2s;
@@ -170,7 +178,7 @@ a:hover {
 	border: 1px solid;
 	border-radius: 10px;
 	padding: 10px;
-	margin: 3% 0% 1% 1%;
+	margin: 3% 1% 1% 1%;
 	width: max-content;
 	font-weight: 600;
 	background-color: #4860fe1a;
